# rust-driver-example

./: .gitignore.swp  Cargo.toml  README.md
docker-compose/: Dockerfile  README.md  check_cluster_healthy  docker-compose.yaml
metric-collector/: Cargo.toml
metric-collector/src/: .main.rs.swp  main.rs
metric-reader/: Cargo.toml
metric-reader/src/: main.rs
uuid_finder/: Cargo.toml
uuid_finder/src/: main.rs
