[package]
name = "metric-collector"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
scylla = "=0.4.1"
tokio = { version = "1.1.0", features = ["full"] }
futures = "0.3.6"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
bigdecimal = "0.2.0"
num-bigint = "0.3"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
rand = "0.7.0" 
console-subscriber = "0"
