[package]
name = "metric-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
scylla = { version = "0.13.1", features = ["chrono"] }
tokio = { version = "1.1.0", features = ["full"] }
futures = "0.3.6"
uuid = { version = "1.3.3", features = ["serde", "v4", "v5"] }
bigdecimal = "0.2.0"
num-bigint = "0.3"
tracing = "0.1.25"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
rand = "0.7.0" 
console-subscriber = "0"
