[package]
name = "uuid_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
scylla = "=0.8.1"
tokio = { version = "1.1.0", features = ["full"] }
futures = "0.3.6"
uuid = { version = "1.3.3", features = ["serde", "v4", "v5"] }
bigdecimal = "0.2.0"
num-bigint = "0.3"
parse_duration = "2.1.1"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
rand = "0.7.0" 
